# MyYolo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.0faa7a3  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  myYolo.drawio  train.drawio  version.h.in
Ttentacle/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Ttentacle/src/include/: funcdef.h  keydef.h
Ttentacle/src/util/: myprocess.cpp  mysetting.cpp
WidgetAddData/: widgetadddata.cpp  widgetadddata.h  widgetadddata.ui
WidgetExport/: widgetexport.cpp  widgetexport.h  widgetexport.ui
WidgetTest/: widgettest.cpp  widgettest.h  widgettest.ui
WidgetTrain/: widgettrain.cpp  widgettrain.h  widgettrain.ui
include/: keydef.h
myYolo_qt/: .clang-format  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myYolo.qrc
myYolo_qt/WidgetAddData/: widgetadddata.cpp  widgetadddata.h
myYolo_qt/WidgetExport/: widgetexport.cpp  widgetexport.h  widgetexport.ui
myYolo_qt/WidgetFilter/: widgetfilter.cpp  widgetfilter.h
myYolo_qt/WidgetLabel/: widgetlabel.h
myYolo_qt/WidgetLog/: widgetlog.cpp  widgetlog.h  widgetlog.ui
myYolo_qt/WidgetMain/Setting/: widgetmainsetting.cpp  widgetmainsetting.h  widgetmainsetting.ui
myYolo_qt/WidgetTest/: check_cv_onnx.cpp  check_cv_onnx.h  check_onnxruntime.cpp  check_onnxruntime.h  onnxcheck.cpp  widgettest.cpp  widgettest.h  widgettest.ui
myYolo_qt/WidgetTrain/: widgettrain.cpp  widgettrain.h  widgettrain.ui
myYolo_qt/include/: funcdef.h  keydef.h
myYolo_qt/res/i18n/: en.qm  en.ts  zh_simple.qm  zh_simple.ts  zh_traditional.qm  zh_traditional.ts
myYolo_qt/res/themes/: Dark.qss  Lite.qss  OSX Lite.qss
myYolo_qt/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
myYolo_qt/src/WidgetAddData/: widgetadddata.cpp  widgetadddata.h  widgetadddata.ui
myYolo_qt/src/WidgetDeploy/: widgetdeploy.cpp  widgetdeploy.h  widgetdeploy.ui
myYolo_qt/src/WidgetExport/: widgetexport.cpp  widgetexport.h
myYolo_qt/src/WidgetFilter/: widgetfilter.cpp  widgetfilter.h  widgetfilter.ui
myYolo_qt/src/WidgetLabel/: widgetlabel.cpp  widgetlabel.h  widgetlabel.ui
myYolo_qt/src/WidgetLog/: widgetlog.cpp  widgetlog.h
myYolo_qt/src/WidgetMain/Info/: widgetmaininfo.h  widgetmaininfo.ui
myYolo_qt/src/WidgetMain/Setting/: widgetmainsetting.cpp  widgetmainsetting.h  widgetmainsetting.ui
myYolo_qt/src/WidgetTest/: check_cv_onnx.cpp  check_onnxruntime.h  widgettest.cpp  widgettest.h
myYolo_qt/src/WidgetTrain/: widgettrain.cpp  widgettrain.h
myYolo_qt/src/common/: confighandler.h
myYolo_qt/src/include/: datadef.h  funcdef.h  global.h  keydef.h
myYolo_qt/src/util/: mydir.h  myprocess.cpp  mysetting.cpp  mysetting.h
myYolo_qt/util/: mydir.h  mylog.h  myprocess.h  mysetting.cpp  mysetting.h  processthread.h
myYolo_web/: main.py
myYolo_web/app/: __init__.py
myYolo_web/app/blueprints/: __init__.py  add_data.py  export.py  filter.py  label.py  root.py  test.py  train.py
myYolo_web/templates/: add_data.html  export.html  filter.html  index.html  label.html  test.html  train.html
myYolo_web/templates/framework/: layout.html
project/script/: encrypt.py  id_modify.py  move_similar_images.py  no_xml2txt.py  p_hasp.py  process_img.py  re_notag.py  rename.py  split_dataset.py  xml2txt.py
project/tools/linux/labelImg-1.8.1/: labelImg.py
project/tools/linux/labelImg-1.8.1/libs/: canvas.py  shape.py
project/train/: README.md
project/yolov5-master/: requirements.txt  train.py
project/yolov5-master/utils/: dataloaders.py
simulate/: test.py
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  myYolo.qrc
src/WidgetAddData/: widgetadddata.cpp  widgetadddata.h  widgetadddata.ui
src/WidgetExport/: widgetexport.cpp  widgetexport.h  widgetexport.ui
src/WidgetFilter/: widgetfilter.cpp  widgetfilter.h  widgetfilter.ui
src/WidgetLabel/: widgetlabel.cpp  widgetlabel.h  widgetlabel.ui
src/WidgetLog/: widgetlog.cpp  widgetlog.h  widgetlog.ui
src/WidgetMain/Info/: widgetmaininfo.cpp  widgetmaininfo.h  widgetmaininfo.ui
src/WidgetMain/Setting/: widgetmainsetting.cpp  widgetmainsetting.h  widgetmainsetting.ui
src/WidgetTest/: onnxcheck.cpp  onnxcheck.h  widgettest.cpp  widgettest.h  widgettest.ui
src/WidgetTrain/: widgettrain.cpp  widgettrain.h  widgettrain.ui
src/common/: confighandler.h
src/include/: datadef.h  funcdef.h  global.h  keydef.h
src/res/i18n/: en.ts  zh_simple.qm  zh_simple.ts  zh_traditional.qm  zh_traditional.ts
src/res/themes/: Dark.qss  Lite.qss  OSX Dark.qss  OSX Lite.qss
src/util/: mydir.cpp  mydir.h  mylog.cpp  mylog.h  myprocess.cpp  myprocess.h  mysetting.cpp  mysetting.h  processthread.cpp  processthread.h
util/: mydir.cpp  mydir.h  mylog.h
